Fix EMI bug